--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,13 @@ spring.h2.console.path=/h2-console
 
 jwt.secret=ompt_super_secure_secret_key_1234567890123456
 jwt.expiration=3600000
+
+app.frontend.url=http://localhost:5173/reset-password
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jaswanth8698@gmail.com
+spring.mail.password=gmqqtnvwpizdszbh
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
