Implement auth, hospital, doctor, profile modules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.mail.password=gmqqtnvwpizdszbh
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
