--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Ompt
 
 
-spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.url=jdbc:h2:file:./testdb;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
